styles/style.css
body{
    background: black;
    color: white;
}

header{
    padding: 4px 16px;
    width: 100%;

    img{
        width: 32px;
    }
}

main{
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 24px;
    padding-left: 4px;
    padding-right: 4px;
}

footer{
    padding: 4px;
}

.pokedex-icon{
    filter: invert(1);
}

.nav{
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
}

.search-input{
    width: 150px;
}

.search-overlay{
    display: none;
    flex-wrap: wrap;
    justify-content: center;
    align-content: flex-start;
    gap: 4px;
    position: fixed;
    height: 100%;
    width: 100%;
    z-index: 2;
    background-color: rgb(0, 0, 0);
}

.pokemon-container{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    gap: 4px;
}

.image-container{
    display: flex;
    justify-content: end;
    align-items: center;
    width: 100%;
    height: 100%;
}

.pokemon-card{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 300px;
    height: 160px;
    padding: 8px;
    background: rgba(91, 91, 91, 0.279);
    border: 1px solid rgba(255, 255, 255, 0.2);
    border-radius: 8px;
    /* backdrop-filter: blur(20px); */
    box-shadow: 2px 2px 20px rgb(255 255 255 / 5%);
}

.pokemon-card:hover{
    filter: brightness(1.25);
}

.pokemon-card-bottom{
    display: flex;
    justify-content: space-between;
    align-items: end;
}

.pokemon-card-details{
    display: flex;
    justify-content: start;
    align-items: center;
}

.pokemon-card-image{
    height: 92px;
}

.types{
    display: flex;
    flex-direction: column;
    gap: 2px;
}

.type{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 60px;
    height: 34px;
    padding: 4px;
    border: 1px solid rgba(0, 0, 0, 0.186);
    border-radius: 4px;
}

.type-fake{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 60px;
    height: 34px;
    padding: 4px;
}

.overlay{
    display: none;
    position: fixed;
    height: 100vh;
    width: 100%;
    z-index: 3;
    background-color: rgba(0, 0, 0, 0.266);
}

.big-card{
    display: flex;
    flex-direction: column;
    position: relative;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: rgb(0, 0, 0);
    width: 300px;
    height: 350px;
    border: 1px solid rgba(255, 255, 255, 0.2);
    box-shadow: 2px 2px 20px rgb(255 255 255 / 5%);
}

.big-card_image-background{
    display: flex;
    justify-content: center;
    align-items: center;
}

.big-card-image{
    width: 100px;
}

.big-card_bottom{
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
    nav{
        width: 100%;
        flex-shrink: 0;
    }
}

.big-card-details{
    flex: 1;
    width: 100%;
    min-height: 0;
}

.ul_big-card{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    margin: 0;

    li{
        display: flex;
        justify-content: center;
        align-items: center;
        flex: 1;
        cursor: pointer;
        background: rgba(91, 91, 91, 0.279);
        border: 1px solid rgba(255, 255, 255, 0.2);
        box-shadow: 2px 2px 20px rgb(255 255 255 / 5%);
    }
}

.about-card{
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 8px;
}

.stats-card{
    height: 100%;
    width: 100%;
}

.more-button{
    margin: 24px;
}

.about-line-left{
    width: 80px;
}

.stats-card{
    padding: 8px;
}

.stats-line{
    display: flex;
    align-items: start;
    gap: 8px;
}

.stats-line-left{
    width: 130px;
}

.stat-value{
    display: flex;
}

.progress{
    width: 120px;
}

.no-result{
    font-size: 24px;
}

.loadingspinner{
    display: none;
    align-items: center;
    justify-content: center;
    position: fixed;
    height: 100vh;
    width: 100%;
    z-index: 4;
    background-color: rgb(0, 0, 0);
}

.loadingspinner-icon{
    height: 300px;
    animation: rotate 2s linear infinite;
    filter: invert(1);
}

@keyframes rotate{
    form{
        transform: rotate(0deg);
    }

    to{
        transform: rotate(360deg);
    }
}

.arrows-container{
    display: flex;
    justify-content: space-between;
    padding: 8px;
}

